$Id$

0.7.2beta
	- new utility: export-ip-list for generating lists of active
	  IPs in given (sub)nets (for automatically updating access/accounting
	  lists in firewalls)
	- CGI interface: new command "New Search" in Hosts menu	
	- import: fixed IP number parsing (named.conf)
	- CGI interface: fixed "-> This Subnet" button in host display
	- CGI interface: fixed "Show Hosts" button in network/subnet display
	- moduser/modgroup: now lists also IDs for group memberships,
	  making it easier to remove group membership from a user
	- fixed server selection bug in web interface	
	- cleaned up import-ethers (also added --verbose option)
	
0.7.1
	- added "subgroups" for defining additional group(s) for host(s),
	  currently subgroup memberships are used when generating DHCP class
	  entries in dhcpd.conf.
	- linking to "pages" inside Sauron now works (without frames)
	- A host can now be a member of one of more "subgroups" in addition
	  to one (main)group.
	- Database connection interface changed, new configuration
	  options DB_DSN,DB_USER,DB_PASSWORD are now used instead of
	  old DB_CONNECT.
	- CGI interface: added enable/disable buttons for easy
	  togling between host and host reservation
	- CGI interface: added ability to search by date(ranges)
	  (by host creation/modification and last dhcp lease)
	- CGI interface: now advertises "Save Defaults" command to
	  users without saved defaults
	- CGI interface: added ability to search by asset IDs
	- initial "plugin" support for CGI interface 
	  (one sample/test plugin provided as an example)
	- new command "Clear Defaults" in web interface
	  patch by Michael S. Liebman <m-liebman@northwestern.edu>
	- status command now detecs also zone/server changes
	  (previously only host changes were detected)
	- import-dhcp: support for multiple host entries with same
	  MAC and fixes to MAC address parsing  
	  by Spencer H Visick <visick@eng.utah.edu>
	- update-dhcp-info: now supports also logfiles generated by